--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -5,6 +5,7 @@
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
     <uses-permission android:name="android.permission.CAMERA" />
     <uses-permission android:name="android.permission.INTERNET" />
+
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
@@ -45,7 +46,8 @@
         <activity android:name=".RegisterActivity" />
         <activity android:name="com.example.a00.fragment3.NumberActivity" />
         <activity android:name="com.example.a00.fragment1.SearchWordsActivity" />
-        <activity android:name="com.example.a00.fragment3.GetPictureActivity"></activity>
+        <activity android:name="com.example.a00.fragment3.GetPictureActivity" />
+        <activity android:name="com.example.a00.fragment1.WordInfoActivity"></activity>
     </application>
 
 </manifest>
