--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -52,6 +52,7 @@
         <activity android:name="com.example.a00.fragment3.GetPictureActivity" />
         <activity android:name="com.example.a00.fragment1.WordInfoActivity" />
         <activity android:name=".StartReciteWordActivity"></activity>
+        <activity android:name=".MineActivity"></activity>
     </application>
 
 </manifest>
